--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -164,3 +164,13 @@ body {
     left: 2px;
     width: 0px;
 }
+
+.error {
+    color: red;
+}
+
+.table-error td {
+    vertical-align: top;
+    border: solid 1px #888;
+    padding: 10px;
+}
