--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,33 +3,13 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Админка</title>
-    <meta charset="UTF-8"/>
-    <style>
-        table td {
-            vertical-align: top;
-            border: solid 1px #888;
-            padding: 10px;
-        }
-
-        .header-h1 {
-            padding-bottom: .125rem;
-            border-top: .125rem solid #000;
-            border-bottom: .125rem solid #000;
-            font-size: 1.5rem;
-            text-transform: uppercase;
-            text-align: center;
-        }
-
-        .error {
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <main>
     <h1 class="header-h1">Error Page</h1>
 
-    <table>
+    <table class="table-error">
         <tr>
             <td>Date</td>
             <td th:text="${date}"/>
